force-app/main/default/objects/Building_Sales__c/Building_Sales__c.object-meta.xml
<CustomObject>
    <label>Building Sale</label>
    <nameField>
        <displayFormat>BS-{0000}</displayFormat>
        <label>Building Sales</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Sales</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>