force-app/main/default/objects/Building_Sales__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Building Sale</description>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Building Sales</relationshipLabel>
    <relationshipName>Building_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>