force-app/main/default/objects/Building_Sales__c/fields/Price_SF__c.field-meta.xml
<CustomField>
    <fullName>Price_SF__c</fullName>
    <label>Price/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>