force-app/main/default/objects/Building_Sales__c/fields/Seller__c.field-meta.xml
<CustomField>
    <fullName>Seller__c</fullName>
    <label>Seller</label>
    <type>TextArea</type>
</CustomField>