force-app/main/default/objects/Building_Sales__c/fields/Seller_AccLandlord__c.field-meta.xml
<CustomField>
    <fullName>Seller_AccLandlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Landlord</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Past Buildings</relationshipLabel>
    <relationshipName>Building_Sales1</relationshipName>
    <type>Lookup</type>
</CustomField>